--- a/musicbox-style.css
+++ b/musicbox-style.css
@@ -1,3 +1,27 @@
-/*
-TODO(you): Write any additional styles you need here.
-*/
+#audio-player {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.gif {
+    flex-grow: 1;
+    background-image: url();
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.footer {
+    background-color: purple;
+    color: white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    width: 60px;
+    height: 60px;
+}
