--- a/musicbox-style.css
+++ b/musicbox-style.css
@@ -9,6 +9,33 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+    font-size: 50px;
+    color: red;
+}
+
+.show{
+    z-index: 2;
+}
+
+.container {
+    height: inherit;
+    position: relative;
+}
+
+.first {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.second {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .footer {
