--- a/musicbox-style.css
+++ b/musicbox-style.css
@@ -13,7 +13,7 @@
     color: red;
 }
 
-.show{
+.show {
     z-index: 2;
 }
 
@@ -50,4 +50,14 @@
 .button {
     width: 60px;
     height: 60px;
+}
+
+.pause {
+    background-image: url(images/pause.png);
+    background-size: cover;
+}
+
+.play {
+    background-image: url(images/play.png);
+    background-size: cover;
 }
